2005-10-08 Borut Razem <borut.razem@siol.net>
	* src/processor.cc: fixed the "processor list" problem
	* gpsim/makefile.mingw, gpsim/gpsim.vcproj, plat/win32/gpsim.nsi,
	  doc/gpsimWin32.html: linking with libgtkextra-win32-2.1_dll.lib,
	  using gtkextra-win32-2.1.dll

2005-10-07 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: Changed version to 0.24.11

2005-09-23 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/parse.yy: Added to string_option the ability to use
	a string variable. This will apply to any command that
	uses the string_option. I specifically added it for
	module library.

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* configure.ac: Changed version to 0.24.11

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* src/12bit-processors.cc, src/14bit-processors.cc,
	src/14bit-tmrs.cc, src/16bit-registers.cc, src/p12x.cc,
	src/p16f62x.cc, src/p18x.cc, src/pic-processor.cc, src/tmr0.cc:
	Debug cleanups.

2005-10-03 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: More source browser preference configuration.
	* gui/gui_regwin.cc: Turned register sheet rows and columns back
	on. (They were off because of a bug in gtkextra, but that bug is
	fixed now).
	* src/16bit-processors.cc, src/16bit-registers.cc, src/p18x.cc,
	src/tmr0.cc:
	The create+sfr_map() method was getting called twice fof the p18f
	devices.
	T0CON was not retaining its 0xff reset value.
	TMR0L was reporting the wrong value while it was turned off.
	* regression/run_regression.sh, regression/tmr0_16bit/18f452.lkr,
	regression/tmr0_16bit/Makefile,
	regression/tmr0_16bit/tmr0_16bit.asm,
	regression/tmr0_16bit/tmr0_16bit.stc:
	Added a regression test for TMR0.

2005-10-02 Borut Razem <borut.razem@siol.net>
	* gui/makefile.mingw: Updates to support user defined preferences.
	* doc/gpsimWin32.html: Use CSS

2005-10-01 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: Changed Processor::init_program_memory_at_index()
	so a derived processor can define its own bad_instruction type.
